# keep-agent-mem

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.junie/memory/: feedback.md
scripts/: smoke_test.py
skills/keep-agent-mem/: SKILL.md
skills/keep-agent-mem/scripts/: exchange_google_keep_token.py
src/server/: cli.py  keep_api.py  models.py
tests/: test_cli.py  test_keep_api.py  test_keep_client.py
