[project]
name = "keep-agent-mem"
version = "0.3.0"
description = "Agent Memory via Google Keep MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==3.4.2",
    "gkeepapi>=0.16.0",
    "python-dotenv>=1.2.2",
]
authors = [
    { name = "Nik Anand", email = "mntechsurvey@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/anand-92/keep-agent-mem"
Repository = "https://github.com/anand-92/keep-agent-mem"

[project.scripts]
keep-agent-mem = "server.cli:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/server"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
